# OGL-Renderer

./: .gitignore  CMakeLists.txt  README.md  main.cpp  texture_test.ppm
libraries/glad/include/glad/: glad.h
libraries/glad/src/: glad.c
shaders/: default.frag  default.vert
src/: AssetManager.cpp  AssetManager.h  Block.cpp  Block.h  Camera.cpp  Camera.h  Chunk.cpp  Chunk.h  Definitions.h  IRegistry.h  Image.cpp  Image.h  ImageRegistry.cpp  ImageRegistry.h  OBJMesh.cpp  OBJMesh.h  PerspectiveProjectionInfo.h  Registry.cpp  Registry.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  ShaderManager.cpp  ShaderManager.h  Texture.cpp  Texture.h  Vertex.h  Window.cpp  Window.h
src/ECS/Components/: RenderComponent.h
src/ECS/Core/: BaseSystem.h  ComponentManager.cpp  ComponentManager.h  ECS.cpp  ECS.h  Entity.h
src/ECS/Systems/: RenderSystem.cpp  RenderSystem.h
src/Game/: GameObject.cpp  GameObject.h
